<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_register"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.benitkibabu.sap.LoginActivity" >

    <!-- Main content (main screen) -->

    <RelativeLayout
        android:id="@+id/login_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </RelativeLayout>
    
    <Button
        android:id="@+id/notreg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_btn"
        android:layout_marginTop="14dp"
        android:background="@null"
        android:text="@string/not_reg"
        android:textColor="@color/bg_register"
        android:textColorHint="@color/bg_main" />

    <EditText
        android:id="@+id/emailSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSF"
        android:layout_marginTop="27dp"
        android:background="@drawable/btn_login_style"
        android:text="@string/sign_in" />

    <EditText
        android:id="@+id/passwordSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailSF"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white" />

</RelativeLayout>
